apps/vaultwarden/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels: { app: vaultwarden }
  template:
    metadata:
      labels: { app: vaultwarden }
    spec:
      containers:
        - name: vaultwarden
          image: vaultwarden/server:1.37.4
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
