apps/vaultwarden/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  type: ClusterIP
  selector: { app: vaultwarden }
  ports:
    - name: http
      port: 80
      targetPort: 80
